feat: añadir función de actualización automática con Netlify

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
-VITE_COR_API_KEY=
-VITE_COR_CLIENT_SECRET=
-VITE_FACTORIAL_API_KEY=
+VITE_SUPABASE_URL=your-supabase-url
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+VITE_SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+VITE_COR_API_KEY=your-cor-api-key
+VITE_COR_CLIENT_SECRET=your-cor-client-secret
+VITE_FACTORIAL_API_KEY=your-factorial-api-key
