--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,40 @@
+# Dependencias
 node_modules
-.env
-.DS_Store
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Producción
 dist
-capacity-dashboard@0.0.0
+dist-ssr
+*.local
+
+# Variables de entorno
+.env
+.env.*
+!.env.example
+
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Local Netlify folder
+.netlify
