--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "migrate": "tsx src/scripts/migrateData.ts",
+    "update-data": "tsx src/scripts/updateData.ts",
     "test": "vitest"
   },
   "dependencies": {
@@ -16,7 +17,6 @@
     "@ag-grid-community/core": "^32.3.3",
     "@ag-grid-community/react": "^32.3.3",
     "@ag-grid-community/styles": "^33.0.3",
-    "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-table": "^8.20.6",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@netlify/functions": "^3.0.0",
+    "@supabase/supabase-js": "^2.47.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
@@ -38,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^25.0.1",
+    "netlify-cli": "^17.38.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
