--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -2,23 +2,25 @@ name: Daily Data Update
 
 on:
   schedule:
-    - cron: '1 0 * * *'
+    - cron: "1 0 * * *"  # Ejecuta todos los días a las 00:01 UTC
   workflow_dispatch:
 
 jobs:
   update-data:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Run update script
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
@@ -26,5 +28,4 @@ jobs:
           COR_API_KEY: ${{ secrets.COR_API_KEY }}
           COR_CLIENT_SECRET: ${{ secrets.COR_CLIENT_SECRET }}
           FACTORIAL_API_KEY: ${{ secrets.FACTORIAL_API_KEY }}
-        run: |
-          npx ts-node src/scripts/updateData.ts
+        run: npm run updateData
