--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "migrate": "tsx src/scripts/migrateData.ts",
     "update-data": "tsx src/scripts/updateData.ts",
+    "updateData": "ts-node src/scripts/updateData.ts",
     "test": "vitest"
   },
   "dependencies": {
@@ -40,9 +41,10 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^25.0.1",
-    "netlify-cli": "^17.38.1",
+    "netlify-cli": "^18.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
