--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -2,24 +2,26 @@ name: Daily Data Update
 
 on:
   schedule:
-    - cron: "1 0 * * *"  # Ejecuta todos los días a las 00:01 UTC
+    - cron: "1 0 * * *"  # Todos los días a las 00:01 (UTC)
   workflow_dispatch:
 
 jobs:
   update-data:
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Build scripts
+        run: npm run build:scripts
 
       - name: Run update script
         env:
