--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,33 +1,22 @@
-name: Daily Data Update
+name: Actualizar datos y vistas materializadas
 
 on:
   schedule:
-    - cron: '1 0 * * *'  # Corre todos los días a las 00:01 (UTC)
-  workflow_dispatch:      # Permite ejecutar el workflow manualmente
+    - cron: '1 0 * * *'  # Ejecuta a las 00:01 UTC todos los días
+  workflow_dispatch:  # Permite ejecutar manualmente desde la interfaz de GitHub
 
 jobs:
-  update-data:
+  update:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      - name: Checkout del código
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Configurar Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build scripts
-        run: npm run build:scripts
-
-      - name: Run update script
-        env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-          COR_API_KEY: ${{ secrets.COR_API_KEY }}
-          COR_CLIENT_SECRET: ${{ secrets.COR_CLIENT_SECRET }}
-          FACTORIAL_API_KEY: ${{ secrets.FACTORIAL_API_KEY }}
-        run: npm run updateData
+      - name: Instalar dependencias
+        run: npm install
